<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/homeBackground"
    android:orientation="vertical"
    tools:context=".MapActivity">

    <LinearLayout
        android:orientation="horizontal"

        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:padding="8dp"
        android:weightSum="4"
        android:background="@color/gray">

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Tan Tock Seng Hospital Map"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="22sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ozaydin.serkan.com.image_zoom_view.ImageViewZoom
                        android:layout_width="400dp"
                        android:layout_height="500dp"
                        android:id="@+id/hospital_map"
                        android:layout_gravity="center_horizontal"/>
                   <!-- <ImageView
                        android:id="@+id/hospital_map"
                        android:layout_width="400dp"
                        android:layout_height="500dp"
                        android:layout_gravity="center_horizontal"/>-->

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:padding="8dp">

            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">

                <Button
                    android:id="@+id/btn_b3"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="B3"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">


                <Button
                    android:id="@+id/btn_b2"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="B2"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">


                <Button
                    android:id="@+id/btn_b1"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="B1"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">



                <Button
                    android:id="@+id/btn_1"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="1"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">

                <Button
                    android:id="@+id/btn_2"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="2"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">


                <Button
                    android:id="@+id/btn_3"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="3"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">


                <Button
                    android:id="@+id/btn_4"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="4"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">


                <Button
                    android:id="@+id/btn_6"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:text="6"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">


                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="B3"
                    android:textSize="25sp" />


            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </LinearLayout>
</LinearLayout>